[package]
name = "graphson-derive"
version = "0.1.0"
authors = ["dbcfd <bdbrowning2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "1.0"

[dev-dependencies]
graphson-structure = { path = "../structure" }

[lib]
proc-macro = true
